        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Capture HTTP context (status code, headers, etc.) on transactions (and
  captured errors) for Lambda functions triggered by API Gateway.
  ({issues}2419[#2419])

* Support instrumentation for restify@10.

[float]
===== Bug fixes

[float]
===== Chores

* Mark the published Lambda layer as supporting the recently released
  "nodejs18.x" Lambda Runtime (`--compatible-runtimes`).


[[release-notes-3.40.1]]
==== 3.40.1 2022/11/15

[float]
===== Bug fixes

* Prevent a possible tight loop in central config fetching. ({issues}3029[#3029])


[[release-notes-3.40.0]]
==== 3.40.0 2022/10/31

[float]
===== Features

* Enable support for redis v4 ({pull}2945[#2945])

* preview:[] Next.js server-side instrumentation. See the <<nextjs>> document.
+
This adds instrumentation of the Next.js dev server (`next dev`) and prod
server (`next start`). The APM transactions for incoming HTTP requests to the
server will be named appropriately based on Next.js's routing -- both for
user page routes (e.g. `GET /a-dynamic-page/[id]`) and for internal Next.js
routes (e.g. `Next.js _next/data route my-page`,
`Next.js Rewrite route /foo -> /bar`). As well, exceptions in server-side code
(e.g. `getServerSideProps`, server-side run page handlers, API handlers) will
be reported. ({pull}2959[#2959])
+
This is a technical preview to get feedback from Next.js users. The details on
how exactly the instrumentation works may change in future versions.

* Improve container-info gathering to support AWS ECS/Fargate environments.
  ({issues}2914[#2914])

[float]
===== Bug fixes

* Source lines of context in stacktraces is *no longer reported* for "*.min.js"
  files that do not have source-map information. These files are assumed to
  be minimized files, for which source line context won't be useful. This